Mark SHA-1 subdomains as retired; move HTTP input below mixed content for column for balance.
At least in Chrome, the subdomains still trigger the weak cert signature
algorithm error, so it makes sense to keep the subdomains around for a bit.
However, we need a more general solution for issue #217 in the future.

--- a/domains/misc/badssl.com/index.html
+++ b/domains/misc/badssl.com/index.html
@@ -35,8 +35,6 @@
     <a href="https://revoked.{{ site.domain }}/" class="bad"><span class="icon"></span>revoked</a>
     <a href="https://incomplete-chain.{{ site.domain }}/" class="dubious"><span class="icon"></span>incomplete-chain</a>
     <hr>
-    <a href="https://sha1-2016.{{ site.domain }}/" class="dubious"><span class="icon"></span>sha1-2016</a>
-    <a href="https://sha1-2017.{{ site.domain }}/" class="bad"><span class="icon"></span>sha1-2017</a>
     <a href="https://sha256.{{ site.domain }}/" class="good"><span class="icon"></span>sha256</a>
     <hr>
     <a href="https://1000-sans.{{ site.domain }}/" class="good"><span class="icon"></span>1000-sans</a>
@@ -51,6 +49,13 @@
     <hr>
     <a href="https://mixed.{{ site.domain }}/" class="dubious"><span class="icon"></span>mixed</a>
     <a href="https://mixed-favicon.{{ site.domain }}/" class="dubious"><span class="icon"></span>mixed-favicon</a>
+  </div>
+  <div class="group">
+    <h2 id="miscellaneous"><span class="emoji">✏️</span>HTTP Input</h2>
+    <a href="http://http-password.{{ site.domain }}/" class="bad"><span class="icon"></span>http-password</a>
+    <a href="http://http-login.{{ site.domain }}/" class="bad"><span class="icon"></span>http-login</a>
+    <a href="http://http-dynamic-login.{{ site.domain }}/" class="bad"><span class="icon"></span>http-dynamic-login</a>
+    <a href="http://http-credit-card.{{ site.domain }}/" class="bad"><span class="icon"></span>http-credit-card</a>
   </div>
   <div class="group">
     <h2 id="cipher-suite"><span class="emoji">🔀</span>Cipher Suite</h2>
@@ -90,13 +95,6 @@
     <a href="https://https-everywhere.{{ site.domain }}/" class="good hidden"><span class="icon"></span>https-everywhere</a>
   </div>
   <div class="group">
-    <h2 id="miscellaneous"><span class="emoji">✏️</span>HTTP Input</h2>
-    <a href="http://http-password.{{ site.domain }}/" class="bad"><span class="icon"></span>http-password</a>
-    <a href="http://http-login.{{ site.domain }}/" class="bad"><span class="icon"></span>http-login</a>
-    <a href="http://http-dynamic-login.{{ site.domain }}/" class="bad"><span class="icon"></span>http-dynamic-login</a>
-    <a href="http://http-credit-card.{{ site.domain }}/" class="bad"><span class="icon"></span>http-credit-card</a>
-  </div>
-  <div class="group">
     <h2 id="miscellaneous"><span class="emoji">💬</span>Miscellaneous</h2>
     <a href="http://http.{{ site.domain }}/" class="dubious"><span class="icon"></span>http</a>
     <a href="https://spoofed-favicon.{{ site.domain }}/" class="dubious hidden"><span class="icon"></span>spoofed-favicon</a>
@@ -110,6 +108,11 @@
     <a href="https://superfish.{{ site.domain }}/" class="bad"><span class="icon"></span>(Lenovo) Superfish</a>
     <a href="https://edellroot.{{ site.domain }}/" class="bad"><span class="icon"></span>(Dell) eDellRoot</a>
     <a href="https://dsdtestprovider.{{ site.domain }}/" class="bad"><span class="icon"></span>(Dell) DSD Test Provider</a>
+  </div>
+  <div class="group">
+    <h2 id="defunct"><span class="emoji">☠️</span>Defunct</h2>
+    <a href="https://sha1-2016.{{ site.domain }}/" class="dubious"><span class="icon"></span>sha1-2016</a>
+    <a href="https://sha1-2017.{{ site.domain }}/" class="bad"><span class="icon"></span>sha1-2017</a>
   </div>
 </div><!-- class="column" -->
 
