Put the FUNK in "Defunct".

--- a/domains/misc/badssl.com/index.html
+++ b/domains/misc/badssl.com/index.html
@@ -16,6 +16,10 @@
   <link rel=preload as=image href="front-page-icons/bad-white.svg">
   <link rel=preload as=image href="front-page-icons/dubious-white.svg">
   <link rel=preload as=image href="front-page-icons/good-white.svg">
+
+  <!-- fUnKy -->
+  <link rel="stylesheet" href="funky/funky.css">
+  <script src="funky/funky.js"></script>
 </head>
 <body>
 
