--- a/domains-local-only/cert/ecc384/index.html
+++ b/domains-local-only/cert/ecc384/index.html
@@ -12,5 +12,5 @@ background: green
 </div>
 
 <div id="footer">
-  This site uses a 384 bit ECC (elliptic curve cryptography) certificate.</a>.
+  This site uses a 384-bit ECC digital certificate.
 </div>
