--- a/domains-local-only/cert/ecc384/index.html
+++ b/domains-local-only/cert/ecc384/index.html
@@ -12,5 +12,5 @@ background: green
 </div>
 
 <div id="footer">
-  This site uses a 384-bit ECC digital certificate.
+  This site uses a 384-bit <a href="https://en.wikipedia.org/wiki/Elliptic_curve_cryptography">Elliptic Curve Cryptography</a> (ECC) digital certificate.
 </div>
