Make [dynamic-]login forms go to submissions pages to trigger password manager logic.

--- a/common/input/dynamic-login/index.html
+++ b/common/input/dynamic-login/index.html
@@ -34,9 +34,10 @@ a {
   </a>
   <div id="form-wrapper">
     <br>
-    <form id="form" class="hidden">
+    <form id="form" class="hidden" action="./submit/" method="post">
       <input type="text" id="username" placeholder="username field"/><br><br>
-      <input type="password" id="value" placeholder="password input field" value="password"/>
+      <input type="password" id="value" placeholder="password input field" value="password"/><br><br>
+      <button type="submit">Submit</button>
     </form>
   </div>
 </div>
