--- a/common/input/login/index.html
+++ b/common/input/login/index.html
@@ -15,9 +15,10 @@ background: gray
     login
   </h1>
   <br><br><br>
-  <form>
+  <form action="./submit/" method="post">
     <input type="text" id="username" placeholder="username field"/><br><br>
-    <input type="password" id="value" placeholder="password input field" value="password"/>
+    <input type="password" id="value" placeholder="password input field" value="password"/><br><br>
+    <button type="submit">Submit</button>
   </form>
 </div>
 
