Fiddle with ECC footers for better line breaks.

--- a/domains/cert/ecc384/index.html
+++ b/domains/cert/ecc384/index.html
@@ -12,5 +12,6 @@ background: green
 </div>
 
 <div id="footer">
-  This site uses a 384-bit <a href="https://en.wikipedia.org/wiki/Elliptic_curve_cryptography">Elliptic Curve Cryptography</a> (ECC) digital certificate.
+  This site uses a 384-bit ECC<br>
+  (<a href="https://en.wikipedia.org/wiki/Elliptic_curve_cryptography">Elliptic Curve Cryptography</a>) digital certificate.
 </div>
