--- a/domains/misc/badssl.com/index.html
+++ b/domains/misc/badssl.com/index.html
@@ -44,6 +44,9 @@
     <a href="https://1000-sans.{{ site.domain }}/" class="good"><span class="icon"></span>1000-sans</a>
     <a href="https://10000-sans.{{ site.domain }}/" class="good"><span class="icon"></span>10000-sans</a>
     <hr>
+    <a href="https://ecc256.{{ site.domain }}/" class="good"><span class="icon"></span>ecc256</a>
+    <a href="https://ecc384.{{ site.domain }}/" class="good"><span class="icon"></span>ecc384</a>
+    <hr>
     <a href="https://rsa8192.{{ site.domain }}/" class="dubious"><span class="icon"></span>rsa8192</a>
   </div>
   <div class="group">
