--- a/domains/input/http-login/index.html
+++ b/domains/input/http-login/index.html
@@ -17,7 +17,7 @@ background: red
   </h1>
   <br><br><br>
   <form action="./submit/" method="post">
-    <input type="text" id="username" placeholder="username field"/><br><br>
+    <input type="text" autocomplete="username" id="username" placeholder="username field"/><br><br>
     <input type="password" id="value" placeholder="password input field" value="password"/><br><br>
     <button type="submit">Submit</button>
   </form>
