--- a/common/input/login/index.html
+++ b/common/input/login/index.html
@@ -16,7 +16,7 @@ background: gray
   </h1>
   <br><br><br>
   <form action="./submit/" method="post">
-    <input type="text" id="username" placeholder="username field"/><br><br>
+    <input type="text" autocomplete="username" id="username" placeholder="username field"/><br><br>
     <input type="password" id="value" placeholder="password input field" value="password"/><br><br>
     <button type="submit">Submit</button>
   </form>
