--- a/common/input/dynamic-login/index.html
+++ b/common/input/dynamic-login/index.html
@@ -35,7 +35,7 @@ a {
   <div id="form-wrapper">
     <br>
     <form id="form" class="hidden" action="./submit/" method="post">
-      <input type="text" id="username" placeholder="username field"/><br><br>
+      <input type="text" autocomplete="username" id="username" placeholder="username field"/><br><br>
       <input type="password" id="value" placeholder="password input field" value="password"/><br><br>
       <button type="submit">Submit</button>
     </form>
