Updated both ECC 256-bit and 384-bit index.html to include RSA equivalents

--- a/domains/cert/ecc256/index.html
+++ b/domains/cert/ecc256/index.html
@@ -12,6 +12,6 @@ background: green
 </div>
 
 <div id="footer">
-  This site uses a 256-bit ECC<br>
+  This site uses a 256-bit ECC (equivalent to 3072-bit RSA)<br>
   (<a href="https://en.wikipedia.org/wiki/Elliptic_curve_cryptography">Elliptic Curve Cryptography</a>) digital certificate.
 </div>
