--- a/domains/cert/ecc384/index.html
+++ b/domains/cert/ecc384/index.html
@@ -12,6 +12,6 @@ background: green
 </div>
 
 <div id="footer">
-  This site uses a 384-bit ECC<br>
+  This site uses a 384-bit ECC (equivalent to 7680-bit RSA)<br>
   (<a href="https://en.wikipedia.org/wiki/Elliptic_curve_cryptography">Elliptic Curve Cryptography</a>) digital certificate.
 </div>
