Add mixed-form to index

--- a/domains/misc/badssl.com/index.html
+++ b/domains/misc/badssl.com/index.html
@@ -56,6 +56,7 @@
     <hr>
     <a href="https://mixed.{{ site.domain }}/" class="dubious"><span class="icon"></span>mixed</a>
     <a href="https://mixed-favicon.{{ site.domain }}/" class="dubious"><span class="icon"></span>mixed-favicon</a>
+    <a href="https://mixed-form.{{ site.domain }}/" class="dubious"><span class="icon"></span>mixed-form</a>
   </div>
   <div class="group">
     <h2 id="miscellaneous"><span class="emoji">✏️</span>HTTP Input</h2>
