Add footer to mixed-form page

--- a/domains/mixed/mixed-form/index.html
+++ b/domains/mixed/mixed-form/index.html
@@ -15,3 +15,7 @@ background: rgb(246, 207, 47)
     </form>
   </div>
 </div>
+
+<div id="footer">
+  This page contains a <code>&lt;form&gt;</code> that submits to a HTTP url.
+</div>
