--- a/domains/mixed/mixed-form/index.html
+++ b/domains/mixed/mixed-form/index.html
@@ -5,25 +5,13 @@ favicon: yellow
 background: rgb(246, 207, 47)
 ---
 
-<style>
-#content form input, #content form button {
-  font-size: 4vw;
-}
-</style>
-
 <div id="content">
-  <h1 style="font-size: 5vw;">
-    {{ page.subdomain }}.<br>{{ site.domain }}
+  <h1 style="font-size: 7vw;">
+    mixed form
   </h1>
-  <br><br><br>
-  <div>
-    <form action="http://http.{{ site.domain }}/" method="get">
-      Search: <input type="text" id="query" name="query" placeholder="Non-secure query"><br><br>
-      <button type="submit">Submit</button>
-    </form>
-  </div>
-</div>
-
-<div id="footer">
-  This page contains a <code>&lt;form&gt;</code> that submits to a HTTP url.
+  <br><br>
+  <form action="http://{{ site.http-domain }}/resources/form-submitted.html" method="post">
+    <input type="text" id="value" placeholder="This form submits to HTTP."/>
+    <button type="submit">Submit</button>
+  </form>
 </div>
