Replace front page header text with `site.domain` instead of hardcoding badssl.com .

--- a/domains/misc/badssl.com/index.html
+++ b/domains/misc/badssl.com/index.html
@@ -24,7 +24,7 @@
 <body>
 
 <div class="title-bar" title="badssl.com - a memorable site for HTTPS misconfiguration">
-  badssl.com
+  {{ site.domain }}
 </div>
 
 <div id="links">
