--- a/domains/cert/no-subject/index.html
+++ b/domains/cert/no-subject/index.html
@@ -6,7 +6,7 @@ background: gray
 ---
 
 <div id="content">
-  <h1>
+  <h1 style="font-size: 10vw;">
     {{ page.subdomain }}.<br>{{ site.domain }}
   </h1>
 </div>
