Remove vestigial `hidden` classes on front page. Closes #272.

--- a/domains/misc/badssl.com/index.html
+++ b/domains/misc/badssl.com/index.html
@@ -67,10 +67,10 @@
   <div class="group">
     <h2 id="cipher-suite"><span class="emoji">🔀</span>Cipher Suite</h2>
     <a href="https://cbc.{{ site.domain }}/" class="dubious"><span class="icon"></span>cbc</a>
-    <a href="https://rc4-md5.{{ site.domain }}/" class="bad hidden"><span class="icon"></span>rc4-md5</a>
+    <a href="https://rc4-md5.{{ site.domain }}/" class="bad"><span class="icon"></span>rc4-md5</a>
     <a href="https://rc4.{{ site.domain }}/" class="bad"><span class="icon"></span>rc4</a>
     <a href="https://3des.{{ site.domain }}/" class="bad"><span class="icon"></span>3des</a>
-    <a href="https://null.{{ site.domain }}/" class="bad hidden"><span class="icon"></span>null</a>
+    <a href="https://null.{{ site.domain }}/" class="bad"><span class="icon"></span>null</a>
     <hr>
     <a href="https://mozilla-old.{{ site.domain }}/" class="bad"><span class="icon"></span>mozilla-old</a>
     <a href="https://mozilla-intermediate.{{ site.domain }}/" class="dubious"><span class="icon"></span>mozilla-intermediate</a>
@@ -82,7 +82,7 @@
   <div class="group">
     <h2 id="key-exchange"><span class="emoji">🔑</span>Key Exchange</h2>
     <a href="https://dh480.{{ site.domain }}/" class="bad"><span class="icon"></span>dh480</a>
-    <a href="https://dh512.{{ site.domain }}/" class="bad hidden"><span class="icon"></span>dh512</a>
+    <a href="https://dh512.{{ site.domain }}/" class="bad"><span class="icon"></span>dh512</a>
     <a href="https://dh1024.{{ site.domain }}/" class="dubious"><span class="icon"></span>dh1024</a>
     <a href="https://dh2048.{{ site.domain }}/" class="good"><span class="icon"></span>dh2048</a>
     <hr>
@@ -98,17 +98,17 @@
     <hr>
     <a href="https://preloaded-hsts.{{ site.domain }}/" class="good"><span class="icon"></span>preloaded-hsts</a>
     <a href="https://subdomain.preloaded-hsts.{{ site.domain }}/" class="bad"><span class="icon"></span>subdomain.preloaded-hsts</a>
-    <hr class="hidden">
-    <a href="https://https-everywhere.{{ site.domain }}/" class="good hidden"><span class="icon"></span>https-everywhere</a>
+    <hr>
+    <a href="https://https-everywhere.{{ site.domain }}/" class="good"><span class="icon"></span>https-everywhere</a>
   </div>
   <div class="group">
     <h2 id="miscellaneous"><span class="emoji">💬</span>Miscellaneous</h2>
     <a href="http://http.{{ site.domain }}/" class="dubious"><span class="icon"></span>http</a>
-    <a href="https://spoofed-favicon.{{ site.domain }}/" class="dubious hidden"><span class="icon"></span>spoofed-favicon</a>
+    <a href="https://spoofed-favicon.{{ site.domain }}/" class="dubious"><span class="icon"></span>spoofed-favicon</a>
     <a href="https://pinning-test.{{ site.domain }}/" class="bad"><span class="icon"></span>pinning-test</a>
-    <hr class="hidden">
-    <a href="https://long-extended-subdomain-name-containing-many-letters-and-dashes.{{ site.domain }}/" class="good hidden"><span class="icon"></span>long-extended-subdomain-name-containing-many-letters-and-dashes</a>
-    <a href="https://longextendedsubdomainnamewithoutdashesinordertotestwordwrapping.{{ site.domain }}/" class="good hidden"><span class="icon"></span>longextendedsubdomainnamewithoutdashesinordertotestwordwrapping</a>
+    <hr>
+    <a href="https://long-extended-subdomain-name-containing-many-letters-and-dashes.{{ site.domain }}/" class="good"><span class="icon"></span>long-extended-subdomain-name-containing-many-letters-and-dashes</a>
+    <a href="https://longextendedsubdomainnamewithoutdashesinordertotestwordwrapping.{{ site.domain }}/" class="good"><span class="icon"></span>longextendedsubdomainnamewithoutdashesinordertotestwordwrapping</a>
   </div>
   <div class="group">
     <h2 id="known-bad"><span class="emoji">❌</span>Known Bad</h2>
