Add invalid-expected-sct to the front page. Closes #267.

--- a/domains/misc/badssl.com/index.html
+++ b/domains/misc/badssl.com/index.html
@@ -92,6 +92,10 @@
     <a href="https://static-rsa.{{ site.domain }}/" class="dubious"><span class="icon"></span>static-rsa</a>
   </div>
   <div class="group">
+    <h2 id="key-exchange"><span class="emoji">🔍</span>Certificate Transparency</h2>
+    <a href="https://invalid-expected-sct.{{ site.domain }}/" class="bad"><span class="icon"></span>invalid-expected-sct</a>
+  </div>
+  <div class="group">
     <h2 id="upgrade"><span class="emoji">⬆️</span>Upgrade</h2>
     <a href="https://hsts.{{ site.domain }}/" class="good"><span class="icon"></span>hsts</a>
     <a href="https://upgrade.{{ site.domain }}/" class="good"><span class="icon"></span>upgrade</a>
