--- a/domains/misc/badssl.com/index.html
+++ b/domains/misc/badssl.com/index.html
@@ -47,6 +47,7 @@
     <a href="https://ecc256.{{ site.domain }}/" class="good"><span class="icon"></span>ecc256</a>
     <a href="https://ecc384.{{ site.domain }}/" class="good"><span class="icon"></span>ecc384</a>
     <hr>
+    <a href="https://rsa2048.{{ site.domain }}/" class="good"><span class="icon"></span>rsa2048</a>
     <a href="https://rsa8192.{{ site.domain }}/" class="dubious"><span class="icon"></span>rsa8192</a>
   </div>
   <div class="group">
