Split UI subdomains into a UI section on the front page. #270.

--- a/domains/misc/badssl.com/index.html
+++ b/domains/misc/badssl.com/index.html
@@ -110,6 +110,9 @@
   <div class="group">
     <h2 id="miscellaneous"><span class="emoji">💬</span>Miscellaneous</h2>
     <a href="http://http.{{ site.domain }}/" class="dubious"><span class="icon"></span>http</a>
+  </div>
+  <div class="group">
+    <h2 id="ui"><span class="emoji">👀</span>UI</h2>
     <a href="https://spoofed-favicon.{{ site.domain }}/" class="dubious"><span class="icon"></span>spoofed-favicon</a>
     <hr>
     <a href="https://long-extended-subdomain-name-containing-many-letters-and-dashes.{{ site.domain }}/" class="good"><span class="icon"></span>long-extended-subdomain-name-containing-many-letters-and-dashes</a>
