Add missing period to the end of the rsa2048 page footer.

--- a/domains/cert/rsa2048/index.html
+++ b/domains/cert/rsa2048/index.html
@@ -12,5 +12,5 @@ background: green
 </div>
 
 <div id="footer" style="font-size: 2.75vw;">
-  This site uses an 2048-bit RSA key for key exchange
+  This site uses an 2048-bit RSA key for key exchange.
 </div>
