Move sha384 and sha512 to public domains. Closes #274.

--- a/domains/misc/badssl.com/index.html
+++ b/domains/misc/badssl.com/index.html
@@ -46,6 +46,8 @@
     <a href="https://incomplete-chain.{{ site.domain }}/" class="dubious"><span class="icon"></span>incomplete-chain</a>
     <hr>
     <a href="https://sha256.{{ site.domain }}/" class="good"><span class="icon"></span>sha256</a>
+    <a href="https://sha384.{{ site.domain }}/" class="good"><span class="icon"></span>sha384</a>
+    <a href="https://sha512.{{ site.domain }}/" class="good"><span class="icon"></span>sha512</a>
     <hr>
     <a href="https://1000-sans.{{ site.domain }}/" class="good"><span class="icon"></span>1000-sans</a>
     <a href="https://10000-sans.{{ site.domain }}/" class="good"><span class="icon"></span>10000-sans</a>
