Preload all white icons on front page.
(Even `page`, which is not used right now, but soon will be.)

--- a/domains/misc/badssl.com/index.html
+++ b/domains/misc/badssl.com/index.html
@@ -16,6 +16,9 @@
   <link rel=preload as=image href="front-page-icons/bad-white.svg">
   <link rel=preload as=image href="front-page-icons/dubious-white.svg">
   <link rel=preload as=image href="front-page-icons/good-white.svg">
+  <link rel=preload as=image href="front-page-icons/page-white.svg">
+  <link rel=preload as=image href="front-page-icons/bullet-list-white.svg">
+  <link rel=preload as=image href="front-page-icons/external-white.svg">
 
   <!-- fUnKy -->
   <link rel="stylesheet" href="funky/funky.css">
