Dashboard: refactor configuration.

--- a/domains/misc/badssl.com/dashboard/index.html
+++ b/domains/misc/badssl.com/dashboard/index.html
@@ -10,6 +10,7 @@
   <link rel="shortcut icon" href="/icons/favicon-blue.ico"/>
   <link rel="apple-touch-icon" href="/icons/icon-blue.png"/>
   <link rel="stylesheet" href="index.css">
+  <script src="sets.js"></script>
   <script src="index.js"></script>
 
 </head>
@@ -25,7 +26,7 @@ This test page requires Javascript.
 </noscript>
 </div>
 
-<div id="table-wrapper">
+<div id="table-wrapper" class="hidden">
 </div>
 
 <div class="endnote">
