Fix mixed-form subdomain page heading. #263.

--- a/domains/mixed/mixed-form/index.html
+++ b/domains/mixed/mixed-form/index.html
@@ -6,8 +6,8 @@ background: rgb(246, 207, 47)
 ---
 
 <div id="content">
-  <h1 style="font-size: 7vw;">
-    mixed form
+  <h1 style="font-size: 8vw;">
+    {{ page.subdomain }}.<br>{{ site.domain }}
   </h1>
   <br><br>
   <form action="http://{{ site.http-domain }}/resources/form-submitted.html" method="post">
