--- a/domains/misc/badssl.com/index.html
+++ b/domains/misc/badssl.com/index.html
@@ -45,6 +45,8 @@
     <a href="https://untrusted-root.{{ site.domain }}/" class="bad"><span class="icon"></span>untrusted-root</a>
     <a href="https://revoked.{{ site.domain }}/" class="bad"><span class="icon"></span>revoked</a>
     <a href="https://pinning-test.{{ site.domain }}/" class="bad"><span class="icon"></span>pinning-test</a>
+    <hr>
+    <a href="https://no-common-name.{{ site.domain }}/" class="dubious"><span class="icon"></span>no-common-name</a>
     <a href="https://no-subject.{{ site.domain }}/" class="dubious"><span class="icon"></span>no-subject</a>
     <a href="https://incomplete-chain.{{ site.domain }}/" class="dubious"><span class="icon"></span>incomplete-chain</a>
     <hr>
