Fix input page titles.

--- a/common/mixed/nonexistent-image/index.html
+++ b/common/mixed/nonexistent-image/index.html
@@ -1,5 +1,5 @@
 ---
-title: mixed nonexistent image
+title: mixed nonexistent-image
 layout: page
 favicon: yellow
 background: rgb(246, 207, 47)
@@ -7,7 +7,7 @@ background: rgb(246, 207, 47)
 
 <div id="content">
   <h1 style="font-size: 5vw;">
-    mixed nonexistent image
+    mixed nonexistent-image
   </h1>
   <img class="mixed" src="http://nonexistent.domain/resources/image.jpg" alt="mixed image on nonexistent domain">
 </div>
