--- a/common/test/canceled-image/index.html
+++ b/common/test/canceled-image/index.html
@@ -1,5 +1,5 @@
 ---
-title: canceled image
+title: canceled-image
 layout: page
 favicon: gray
 background: gray
@@ -7,7 +7,7 @@ background: gray
 
 <div id="content">
   <h1 style="font-size: 5vw;">
-    canceled image
+    canceled-image
   </h1>
 </div>
 
