Add sha1-intermediate. Closes #286.

--- a/domains/cert/sha1-intermediate/index.html
+++ b/domains/cert/sha1-intermediate/index.html
@@ -1,8 +1,8 @@
 ---
-subdomain: sha1-interemediate
+subdomain: sha1-intermediate
 layout: page
-favicon: yellow
-background: rgb(246, 207, 47)
+favicon: red
+background: red
 ---
 
 <div id="content">
