--- a/domains/misc/badssl.com/index.html
+++ b/domains/misc/badssl.com/index.html
@@ -137,6 +137,7 @@
     <a href="https://superfish.{{ site.domain }}/" class="bad"><span class="icon"></span>(Lenovo) Superfish</a>
     <a href="https://edellroot.{{ site.domain }}/" class="bad"><span class="icon"></span>(Dell) eDellRoot</a>
     <a href="https://dsdtestprovider.{{ site.domain }}/" class="bad"><span class="icon"></span>(Dell) DSD Test Provider</a>
+    <a href="https://preact-cli.{{ site.domain }}/" class="bad"><span class="icon"></span>preact-cli</a>
   </div>
   <div class="group">
     <h2 id="defunct"><span class="emoji">☠️</span>Defunct</h2>
