--- a/domains/misc/badssl.com/index.html
+++ b/domains/misc/badssl.com/index.html
@@ -138,6 +138,7 @@
     <a href="https://edellroot.{{ site.domain }}/" class="bad"><span class="icon"></span>(Dell) eDellRoot</a>
     <a href="https://dsdtestprovider.{{ site.domain }}/" class="bad"><span class="icon"></span>(Dell) DSD Test Provider</a>
     <a href="https://preact-cli.{{ site.domain }}/" class="bad"><span class="icon"></span>preact-cli</a>
+    <a href="https://webpack-dev-server.{{ site.domain }}/" class="bad"><span class="icon"></span>webpack-dev-server</a>
   </div>
   <div class="group">
     <h2 id="defunct"><span class="emoji">☠️</span>Defunct</h2>
