--- a/common/mixed/image/index.html
+++ b/common/mixed/image/index.html
@@ -9,7 +9,7 @@ background: rgb(246, 207, 47)
   <h1 style="font-size: 7vw;">
     mixed image
   </h1>
-  <img>
+  <div>
     <img class="mixed" src="http://{{ site.http-domain }}/resources/image.jpg" alt="HTTP image">
   </div>
 </div>
