--- a/domains/misc/badssl.com/index.html
+++ b/domains/misc/badssl.com/index.html
@@ -108,7 +108,12 @@
     <a href="https://static-rsa.{{ site.domain }}/" class="dubious"><span class="icon"></span>static-rsa</a>
   </div>
   <div class="group">
-    <h2 id="key-exchange"><span class="emoji">🔍</span>Certificate Transparency</h2>
+    <h2 id="protocol"><span class="emoji">↔️</span>Protocol</h2>
+    <a href="https://tls-v1-0.{{ site.domain }}:1010/" class="dubious"><span class="icon"></span>tls-v1-0</a>
+    <a href="https://tls-v1-1.{{ site.domain }}:1011/" class="dubious"><span class="icon"></span>tls-v1-1</a>
+  </div>
+  <div class="group">
+    <h2 id="certificate-transparency"><span class="emoji">🔍</span>Certificate Transparency</h2>
     <a href="https://invalid-expected-sct.{{ site.domain }}/" class="bad"><span class="icon"></span>invalid-expected-sct</a>
   </div>
   <div class="group">
