Add `Chrome Tests` section to front page.

--- a/domains/misc/badssl.com/index.html
+++ b/domains/misc/badssl.com/index.html
@@ -146,6 +146,11 @@
     <a href="https://webpack-dev-server.{{ site.domain }}/" class="bad"><span class="icon"></span>webpack-dev-server</a>
   </div>
   <div class="group">
+    <h2 id="chrome"><span class="emoji"><img class="chrome-icon" src="front-page-icons/chrome.svg"></span>Chrome Tests</h2>
+    <a href="https://captive-portal.{{ site.domain }}/" class="bad"><span class="icon"></span>captive-portal</a>
+    <a href="https://mitm-software.{{ site.domain }}/" class="bad"><span class="icon"></span>mitm-software</a>
+  </div>
+  <div class="group">
     <h2 id="defunct"><span class="emoji">☠️</span>Defunct</h2>
     <a href="https://sha1-2016.{{ site.domain }}/" class="dubious"><span class="icon"></span>sha1-2016</a>
     <a href="https://sha1-2017.{{ site.domain }}/" class="bad"><span class="icon"></span>sha1-2017</a>
