Updated index to include Firefox.
Added line break and Firefox 44.

--- a/domains/cert/pinning-test/index.html
+++ b/domains/cert/pinning-test/index.html
@@ -12,5 +12,5 @@ background: red
 </div>
 
 <div id="footer">
-  This site is preloaded with a bad HPKP pin starting in Chrome 48.
+  This site is preloaded with a bad <a href="https://en.wikipedia.org/wiki/HTTP_Public_Key_Pinning">HPKP</a> pin starting in<br> Chrome 48 and Firefox 44.
 </div>
