--- a/domains/cert/pinning-test/index.html
+++ b/domains/cert/pinning-test/index.html
@@ -12,6 +12,6 @@ background: red
 </div>
 
 <div id="footer">
-  <div>This site is preloaded with a bad <a href="https://en.wikipedia.org/wiki/HTTP_Public_Key_Pinning">HPKP</a> pin starting in<br> Chrome 48 and Firefox 44.</div>
-  <div style="padding: 10px 0px;">Pinning is only enabled in the official Chrome builds.</div>
+    <div style="font-size: 2.5vw">This site is preloaded with a bad <a href="https://en.wikipedia.org/wiki/HTTP_Public_Key_Pinning">HPKP</a> pin starting in Chrome 48 and Firefox 44.</div>
+    <div style="font-size: 2.5vw">Pinning is disabled in the Opera builds.</div>
 </div>
