Fix HTTP input anchor.

--- a/domains/misc/badssl.com/index.html
+++ b/domains/misc/badssl.com/index.html
@@ -74,7 +74,7 @@
     <a href="https://mixed-form.{{ site.domain }}/" class="dubious"><span class="icon"></span>mixed-form</a>
   </div>
   <div class="group">
-    <h2 id="miscellaneous"><span class="emoji">✏️</span>HTTP Input</h2>
+    <h2 id="http-input"><span class="emoji">✏️</span>HTTP Input</h2>
     <a href="http://http-password.{{ site.domain }}/" class="bad"><span class="icon"></span>http-password</a>
     <a href="http://http-login.{{ site.domain }}/" class="bad"><span class="icon"></span>http-login</a>
     <a href="http://http-dynamic-login.{{ site.domain }}/" class="bad"><span class="icon"></span>http-dynamic-login</a>
