Refactor HTTP subdomains and add textarea. Closes #320.

--- a/domains/misc/badssl.com/index.html
+++ b/domains/misc/badssl.com/index.html
@@ -67,7 +67,9 @@
     <a href="https://mixed-form.{{ site.domain }}/" class="dubious"><span class="icon"></span>mixed-form</a>
   </div>
   <div class="group">
-    <h2 id="http-input"><span class="emoji">✏️</span>HTTP Input</h2>
+    <h2 id="http"><span class="emoji">✏️</span>HTTP</h2>
+    <a href="http://http.{{ site.domain }}/" class="bad"><span class="icon"></span>http</a>
+    <a href="http://http-textarea.{{ site.domain }}/" class="bad"><span class="icon"></span>http-textarea</a>
     <a href="http://http-password.{{ site.domain }}/" class="bad"><span class="icon"></span>http-password</a>
     <a href="http://http-login.{{ site.domain }}/" class="bad"><span class="icon"></span>http-login</a>
     <a href="http://http-dynamic-login.{{ site.domain }}/" class="bad"><span class="icon"></span>http-dynamic-login</a>
@@ -118,10 +120,6 @@
     <a href="https://subdomain.preloaded-hsts.{{ site.domain }}/" class="bad"><span class="icon"></span>subdomain.preloaded-hsts</a>
     <hr>
     <a href="https://https-everywhere.{{ site.domain }}/" class="good"><span class="icon"></span>https-everywhere</a>
-  </div>
-  <div class="group">
-    <h2 id="miscellaneous"><span class="emoji">💬</span>Miscellaneous</h2>
-    <a href="http://http.{{ site.domain }}/" class="dubious"><span class="icon"></span>http</a>
   </div>
   <div class="group">
     <h2 id="ui"><span class="emoji">👀</span>UI</h2>
