--- a/domains/http/http/index.html
+++ b/domains/http/http/index.html
@@ -1,12 +1,12 @@
 ---
 subdomain: http
 layout: page
-favicon: gray
-background: gray
+favicon: red
+background: red
 ---
 
 <div id="content">
-  <h1 style="font-size: 10vw;">
+  <h1 style="font-size: 8vw;">
     {{ page.subdomain }}.{{ site.domain }}
   </h1>
 </div>
