--- a/domains/misc/badssl.com/index.html
+++ b/domains/misc/badssl.com/index.html
@@ -66,7 +66,7 @@
   </div>
   <div class="group">
     <h2 id="client-certificate"><span class="emoji">🎟</span>Client Certificate</h2>
-    <a href="/download/" target="_blank" class="download"><span class="icon"></span>Certificate Downloads</a>
+    <a href="/download/" target="_blank" class="bullet-list"><span class="icon"></span>Certificate Downloads</a>
     <a href="https://client.{{ site.domain }}/" class="good"><span class="icon"></span>client</a>
     <a href="https://client-cert-missing.{{ site.domain }}/" class="bad"><span class="icon"></span>client-cert-missing</a>
   </div>
