--- a/domains/misc/badssl.com/download/index.html
+++ b/domains/misc/badssl.com/download/index.html
@@ -27,12 +27,12 @@
     </thead>
     <tbody>
       <tr>
-        <td><a href="/certs/client.p12">client.p12</a></td>
+        <td><a href="/certs/{{ site.domain }}-client.p12">{{ site.domain }}-client.p12</a></td>
         <td>{{ site.domain }}</td>
         <td>PKCS #12</td>
       </tr>
       <tr>
-        <td><a href="/certs/client.pem">client.pem</a></td>
+        <td><a href="/certs/{{ site.domain }}-client.pem">{{ site.domain }}-client.pem</a></td>
         <td>{{ site.domain }}</td>
         <td>PEM</td>
       </tr>
@@ -53,7 +53,7 @@
     </li>
     <li>
       YubiKeys: import <code><a href="/certs/client.pem">client.pem</a></code> using the following command:<br><br>
-      <code>yubico-piv-tool -a verify-pin -s 9a -a import-key -a import-cert -i client.pem</code>
+      <code>yubico-piv-tool -a verify-pin -s 9a -a import-key -a import-cert -i {{ site.domain }}-client.pem</code>
     </li>
   </ul>
 </div>
