Replace some hardcoded badssl.com strings with {{ site.domain }}.

--- a/domains/misc/badssl.com/dashboard/index.html
+++ b/domains/misc/badssl.com/dashboard/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 
-<div class="title-bar" title="badssl.com - Dashboard">
+<div class="title-bar" title="{{ site.domain }} - Dashboard">
   Dashboard&nbsp;&mdash;&nbsp;<a href="https://{{ site.domain }}">{{ site.domain }}</a>
 </div>
 
