--- a/domains/misc/badssl.com/index.html
+++ b/domains/misc/badssl.com/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
 
-<div class="title-bar" title="badssl.com - a memorable site for HTTPS misconfiguration">
+<div class="title-bar" title="{{ site.domain }} - a memorable site for HTTPS misconfiguration">
   {{ site.domain }}
 </div>
 
