--- a/domains/misc/badssl.com/download/index.html
+++ b/domains/misc/badssl.com/download/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 
-<div class="title-bar" title="badssl.com - Certificate Downloads">
+<div class="title-bar" title="{{ site.domain }} - Certificate Downloads">
   Certificate Downloads&nbsp;&mdash;&nbsp;<a href="https://{{ site.domain }}">{{ site.domain }}</a>
 </div>
 
