Add support for an extended validation certificate

--- a/domains/misc/badssl.com/index.html
+++ b/domains/misc/badssl.com/index.html
@@ -56,6 +56,8 @@
     <hr>
     <a href="https://rsa2048.{{ site.domain }}/" class="good"><span class="icon"></span>rsa2048</a>
     <a href="https://rsa8192.{{ site.domain }}/" class="dubious"><span class="icon"></span>rsa8192</a> 
+    <hr>
+    <a href="https://extended-validation.{{ site.domain }}/" class="good"><span class="icon"></span>extended-validation</a>
   </div>
   <div class="group">
     <h2 id="client-certificate"><span class="emoji">🎟</span>Client Certificate</h2>
