Add `rsa4096` subdomain. Closes #337.

--- a/domains/misc/badssl.com/index.html
+++ b/domains/misc/badssl.com/index.html
@@ -55,6 +55,7 @@
     <a href="https://ecc384.{{ site.domain }}/" class="good"><span class="icon"></span>ecc384</a>
     <hr>
     <a href="https://rsa2048.{{ site.domain }}/" class="good"><span class="icon"></span>rsa2048</a>
+    <a href="https://rsa4096.{{ site.domain }}/" class="good"><span class="icon"></span>rsa4096</a>
     <a href="https://rsa8192.{{ site.domain }}/" class="dubious"><span class="icon"></span>rsa8192</a> 
     <hr>
     <a href="https://extended-validation.{{ site.domain }}/" class="good"><span class="icon"></span>extended-validation</a>
