--- a/domains/misc/badssl.com/index.html
+++ b/domains/misc/badssl.com/index.html
@@ -115,6 +115,7 @@
     <h2 id="protocol"><span class="emoji">↔️</span>Protocol</h2>
     <a href="https://tls-v1-0.{{ site.domain }}:1010/" class="dubious"><span class="icon"></span>tls-v1-0</a>
     <a href="https://tls-v1-1.{{ site.domain }}:1011/" class="dubious"><span class="icon"></span>tls-v1-1</a>
+    <a href="https://tls-v1-2.{{ site.domain }}:1012/" class="good"><span class="icon"></span>tls-v1-2</a>
   </div>
   <div class="group">
     <h2 id="certificate-transparency"><span class="emoji">🔍</span>Certificate Transparency</h2>
