Add incomplete chain description in footer. #292

--- a/domains/cert/incomplete-chain/index.html
+++ b/domains/cert/incomplete-chain/index.html
@@ -10,3 +10,7 @@ background: rgb(243, 121, 46)
     {{ page.subdomain }}.<br>{{ site.domain }}
   </h1>
 </div>
+
+<div id="footer" style="font-size: 1.5vw">
+  Missing intermediate certificate(s) in certificate chain. Browsers may load it from browser cache or <a href="https://tools.ietf.org/html/rfc3280#section-4.2.2.1">AIA chasing</a>. Ideally, server should be configured to send the complete trust chain.
+</div>
