--- a/domains/cert/incomplete-chain/index.html
+++ b/domains/cert/incomplete-chain/index.html
@@ -12,5 +12,5 @@ background: rgb(243, 121, 46)
 </div>
 
 <div id="footer" style="font-size: 1.5vw">
-  Missing intermediate certificate(s) in certificate chain. Browsers may load it from browser cache or <a href="https://tools.ietf.org/html/rfc3280#section-4.2.2.1">AIA chasing</a>. Ideally, server should be configured to send the complete trust chain.
+  The certificate chain sent by this site is missing an intermediate certificate. This will cause a certificate error unless the browser already has the intermediate certificate in a cache or implements <a href="https://tools.ietf.org/html/rfc3280#section-4.2.2.1">AIA fetching</a>.
 </div>
