Add incomplete chain description in footer. (#366)
Add incomplete chain description in footer. Fixes #292

--- a/domains/cert/incomplete-chain/index.html
+++ b/domains/cert/incomplete-chain/index.html
@@ -10,3 +10,7 @@ background: rgb(243, 121, 46)
     {{ page.subdomain }}.<br>{{ site.domain }}
   </h1>
 </div>
+
+<div id="footer" style="font-size: 1.5vw">
+  The certificate chain sent by this site is missing an intermediate certificate. This will cause a certificate error unless the browser already has the intermediate certificate in a cache or implements <a href="https://tools.ietf.org/html/rfc3280#section-4.2.2.1">AIA fetching</a>.
+</div>
