Tweak formatting for client cert passwords
Completely overlooked it just like in #369, hopefully this overkill formatting tweak can help those later.

--- a/domains/misc/badssl.com/download/index.html
+++ b/domains/misc/badssl.com/download/index.html
@@ -28,12 +28,12 @@
     <tbody>
       <tr>
         <td><a href="/certs/{{ site.domain }}-client.p12">{{ site.domain }}-client.p12</a></td>
-        <td>{{ site.domain }}</td>
+        <td><b><code>{{ site.domain }}</code></b></td>
         <td>PKCS #12</td>
       </tr>
       <tr>
         <td><a href="/certs/{{ site.domain }}-client.pem">{{ site.domain }}-client.pem</a></td>
-        <td>{{ site.domain }}</td>
+        <td><b><code>{{ site.domain }}</code></b></td>
         <td>PEM</td>
       </tr>
     </tbody>
