Add lock-emoji-in-title page

--- a/domains/misc/badssl.com/index.html
+++ b/domains/misc/badssl.com/index.html
@@ -134,6 +134,7 @@
   <div class="group">
     <h2 id="ui"><span class="emoji">👀</span>UI</h2>
     <a href="https://spoofed-favicon.{{ site.domain }}/" class="dubious"><span class="icon"></span>spoofed-favicon</a>
+    <a href="https://lock-title.{{ site.domain }}/" class="dubious"><span class="icon"></span>lock-title</a>
     <hr>
     <a href="https://long-extended-subdomain-name-containing-many-letters-and-dashes.{{ site.domain }}/" class="good"><span class="icon"></span>long-extended-subdomain-name-containing-many-letters-and-dashes</a>
     <a href="https://longextendedsubdomainnamewithoutdashesinordertotestwordwrapping.{{ site.domain }}/" class="good"><span class="icon"></span>longextendedsubdomainnamewithoutdashesinordertotestwordwrapping</a>
