--- a/domains/misc/badssl.com/index.html
+++ b/domains/misc/badssl.com/index.html
@@ -103,8 +103,8 @@
     <h2 id="key-exchange"><span class="emoji">🔑</span>Key Exchange</h2>
     <a href="https://dh480.{{ site.domain }}/" class="bad"><span class="icon"></span>dh480</a>
     <a href="https://dh512.{{ site.domain }}/" class="bad"><span class="icon"></span>dh512</a>
-    <a href="https://dh1024.{{ site.domain }}/" class="dubious"><span class="icon"></span>dh1024</a>
-    <a href="https://dh2048.{{ site.domain }}/" class="good"><span class="icon"></span>dh2048</a>
+    <a href="https://dh1024.{{ site.domain }}/" class="bad"><span class="icon"></span>dh1024</a>
+    <a href="https://dh2048.{{ site.domain }}/" class="dubious"><span class="icon"></span>dh2048</a>
     <hr>
     <a href="https://dh-small-subgroup.{{ site.domain }}/" class="bad"><span class="icon"></span>dh-small-subgroup</a>
     <a href="https://dh-composite.{{ site.domain }}/" class="bad"><span class="icon"></span>dh-composite</a>
