Update dh1024/2048 page backgrounds

--- a/domains/key-exchange/dh2048/index.html
+++ b/domains/key-exchange/dh2048/index.html
@@ -1,8 +1,8 @@
 ---
 subdomain: dh2048
 layout: page
-favicon: green
-background: green
+favicon: yellow
+background: rgb(246, 207, 47)
 ---
 
 <div id="content">
