--- a/domains/key-exchange/dh1024/index.html
+++ b/domains/key-exchange/dh1024/index.html
@@ -1,8 +1,8 @@
 ---
 subdomain: dh1024
 layout: page
-favicon: yellow
-background: rgb(246, 207, 47)
+favicon: red
+background: red
 ---
 
 <div id="content">
