--- a/domains/misc/badssl.com/index.html
+++ b/domains/misc/badssl.com/index.html
@@ -120,6 +120,7 @@
   <div class="group">
     <h2 id="certificate-transparency"><span class="emoji">🔍</span>Certificate Transparency</h2>
     <a href="https://invalid-expected-sct.{{ site.domain }}/" class="bad"><span class="icon"></span>invalid-expected-sct</a>
+    <a href="https://no-sct.{{ site.domain }}/" class="bad"><span class="icon"></span>no-sct</a>
   </div>
   <div class="group">
     <h2 id="upgrade"><span class="emoji">⬆️</span>Upgrade</h2>
