--- a/domains/cert/no-sct/index.html
+++ b/domains/cert/no-sct/index.html
@@ -12,5 +12,5 @@ background: red
 </div>
 
 <div id="footer">
-  The server does not send a <a href="https://www.certificate-transparency.org/how-ct-works">Signed Certificate Timestamps (SCTs)</a> for this domain.
+  The server does not send a <a href="https://www.certificate-transparency.org/how-ct-works">Signed Certificate Timestamp (SCT)</a> for this domain.
 </div>
