--- a/domains/misc/badssl.com/index.html
+++ b/domains/misc/badssl.com/index.html
@@ -42,6 +42,7 @@
     <a href="https://no-common-name.{{ site.domain }}/" class="dubious"><span class="icon"></span>no-common-name</a>
     <a href="https://no-subject.{{ site.domain }}/" class="dubious"><span class="icon"></span>no-subject</a>
     <a href="https://incomplete-chain.{{ site.domain }}/" class="dubious"><span class="icon"></span>incomplete-chain</a>
+    <a href="https://disorderly-chain.{{ site.domain }}/" class="dubious"><span class="icon"></span>disorderly-chain</a>
     <hr>
     <a href="https://sha1-intermediate.{{ site.domain }}/" class="bad"><span class="icon"></span>sha1-intermediate</a>
     <a href="https://sha256.{{ site.domain }}/" class="good"><span class="icon"></span>sha256</a>
