Fix typo in naming of reversed certificate chain
It's _reversed_ rather than reverse.

--- a/domains/cert/reversed-chain/index.html
+++ b/domains/cert/reversed-chain/index.html
@@ -1,5 +1,5 @@
 ---
-subdomain: reverse-chain
+subdomain: reversed-chain
 layout: page
 favicon: orange
 background: rgb(243, 121, 46)
@@ -12,5 +12,5 @@ background: rgb(243, 121, 46)
 </div>
 
 <div id="footer" style="font-size: 1.5vw">
-  The certificate chain sent by this site is not hierarchically ordered. This will cause a certificate error unless the browser knows how to walk a reverse chain.
+  The certificate chain sent by this site is not hierarchically ordered. This will cause a certificate error unless the browser knows how to walk a reversed chain.
 </div>
