Provide a subdomain with a reversed certificate chain (#443)
* Change Ruby version to 2.4

Jekyll requires Ruby 2.4. Update Dockerfile to include it per comment by @shawn-lo on #405 .

* Do not run `docker-run` before `docker-build` or `certs-test` have concluded

* Provide a subdomain with a disorderly certificate chain

* Improve naming of misorderly certificate chain

Rename it from disorderly certificate chain, as suggested by lgarron.

* Improve naming of reverse certificate chain

Ideally, a misorderly chain would leverage 3 or more certificates; since
there may be some obstacles to doing so with the live website,
simplify the expectations of our use case by renaming it to reverse
certificate chain.

* Fix typo in naming of reversed certificate chain

It's _reversed_ rather than reverse.

Co-authored-by: Brad <brad.haas@gmail.com>

--- a/domains/misc/badssl.com/index.html
+++ b/domains/misc/badssl.com/index.html
@@ -42,6 +42,7 @@
     <a href="https://no-common-name.{{ site.domain }}/" class="dubious"><span class="icon"></span>no-common-name</a>
     <a href="https://no-subject.{{ site.domain }}/" class="dubious"><span class="icon"></span>no-subject</a>
     <a href="https://incomplete-chain.{{ site.domain }}/" class="dubious"><span class="icon"></span>incomplete-chain</a>
+    <a href="https://reversed-chain.{{ site.domain }}/" class="dubious"><span class="icon"></span>reversed-chain</a>
     <hr>
     <a href="https://sha256.{{ site.domain }}/" class="good"><span class="icon"></span>sha256</a>
     <a href="https://sha384.{{ site.domain }}/" class="good"><span class="icon"></span>sha384</a>
