Change all ☠️ defunct from dubious to bad

--- a/domains/misc/badssl.com/index.html
+++ b/domains/misc/badssl.com/index.html
@@ -153,7 +153,7 @@
   </div>
   <div class="group">
     <h2 id="defunct"><span class="emoji">☠️</span>Defunct</h2>
-    <a href="https://sha1-2016.{{ site.domain }}/" class="dubious"><span class="icon"></span>sha1-2016</a>
+    <a href="https://sha1-2016.{{ site.domain }}/" class="bad"><span class="icon"></span>sha1-2016</a>
     <a href="https://sha1-2017.{{ site.domain }}/" class="bad"><span class="icon"></span>sha1-2017</a>
     <a href="https://sha1-intermediate.{{ site.domain }}/" class="bad"><span class="icon"></span>sha1-intermediate</a>
     <a href="https://invalid-expected-sct.{{ site.domain }}/" class="bad"><span class="icon"></span>invalid-expected-sct</a>
