Add MD5 and SHA-1 server signatures
These correspond to the configurations deprecated by RFC 9155. I've
marked MD5 as "bad" because it really should have been out of clients by
now. I've marked SHA-1 as "dubious" for now because it's analogous to
TLS 1.0/1.1, and clients still support it for now (but hopefully not for
much longer).

--- a/domains/misc/badssl.com/index.html
+++ b/domains/misc/badssl.com/index.html
@@ -111,6 +111,11 @@
     <a href="https://static-rsa.{{ site.domain }}/" class="dubious"><span class="icon"></span>static-rsa</a>
   </div>
   <div class="group">
+    <h2 id="server-signature"><span class="emoji">✒️</span>Server Signature</h2>
+    <a href="https://md5-server-signature.{{ site.domain }}/" class="bad"><span class="icon"></span>md5-server-signature</a>
+    <a href="https://sha1-server-signature.{{ site.domain }}/" class="dubious"><span class="icon"></span>sha1-server-signature</a>
+  </div>
+  <div class="group">
     <h2 id="protocol"><span class="emoji">↔️</span>Protocol</h2>
     <a href="https://tls-v1-0.{{ site.domain }}:1010/" class="dubious"><span class="icon"></span>tls-v1-0</a>
     <a href="https://tls-v1-1.{{ site.domain }}:1011/" class="dubious"><span class="icon"></span>tls-v1-1</a>
